@@ -15,18 +15,18 @@
  */
 package com.forgerock.sapi.gateway.fapi.v1;
 
+import static com.forgerock.sapi.gateway.dcr.models.RegistrationRequest.REGISTRATION_REQUEST_KEY;
+import static com.forgerock.sapi.gateway.util.ContextUtils.getRequiredAttributeAsType;
 import static org.forgerock.openig.util.JsonValues.requiredHeapObject;
 
-import java.io.IOException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
-import java.util.function.BiFunction;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -35,13 +35,10 @@ import org.forgerock.http.Handler;
 import org.forgerock.http.protocol.Request;
 import org.forgerock.http.protocol.Response;
 import org.forgerock.json.JsonValue;
-import org.forgerock.json.jose.common.JwtReconstruction;
-import org.forgerock.json.jose.exceptions.InvalidJwtException;
 import org.forgerock.json.jose.jws.JwsAlgorithm;
-import org.forgerock.json.jose.jws.SignedJwt;
-import org.forgerock.json.jose.jwt.JwtClaimsSet;
 import org.forgerock.openig.heap.GenericHeaplet;
 import org.forgerock.openig.heap.HeapException;
+import org.forgerock.services.context.AttributesContext;
 import org.forgerock.services.context.Context;
 import org.forgerock.util.promise.NeverThrowsException;
 import org.forgerock.util.promise.Promise;
@@ -49,29 +46,30 @@ import org.forgerock.util.promise.Promises;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.forgerock.sapi.gateway.common.jwt.ClaimsSetFacade;
+import com.forgerock.sapi.gateway.common.jwt.JwtException;
 import com.forgerock.sapi.gateway.dcr.common.DCRErrorCode;
 import com.forgerock.sapi.gateway.dcr.common.ErrorResponseFactory;
 import com.forgerock.sapi.gateway.dcr.common.Validator;
 import com.forgerock.sapi.gateway.dcr.common.exceptions.ValidationException;
+import com.forgerock.sapi.gateway.dcr.models.RegistrationRequest;
+import com.forgerock.sapi.gateway.dcr.request.RegistrationRequestBuilderFilter;
 import com.forgerock.sapi.gateway.mtls.CertificateRetriever;
 import com.forgerock.sapi.gateway.mtls.ContextCertificateRetriever;
 import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
 
 /**
- * Filter which rejects Dynamic Client Registration (DCR) request that would result in OAuth2 clients that would not
- * meet the following FAPI specifications:
+ * Filter that validates Dynamic Client Registration (DCR) requests to make sure that they will produce OAuth2.0 clients
+ * that are compliant with the following FAPI specifications:
  * <p>
  * <a href="https://openid.net/specs/openid-financial-api-part-1-1_0.html#authorization-server">
  * Financial-grade API Security Profile 1.0 - Part 1: Baseline</a>
- * </p>
  * <p>
  * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html">
  * Financial-grade API Security Profile 1.0 - Part 2: Advanced</a>
- * </p>
- *
+ * <p>
  * This filter ensures that when subsequent filters are called the following conditions of the FAPI spec have been
  * met:
- *
  * <ul>
  *   <li>5.2.2 2: shall require:</li>
  *   <ul>
@@ -83,7 +81,8 @@ import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
  * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#algorithm-considerations">
  *     Financial-grade API Security Profile 1.0 - Part 2: Advanced </a>  section 8.6 states:
  *
- * <p>For JWS, both clients and authorization servers
+ * <p>
+ * For JWS, both clients and authorization servers
  * <ol>
  *     <li>shall use PS256 or ES256 algorithms; </li>
  *     <li>should not use algorithms that use RSASSA-PKCS1-v1_5 (e.g. RS256); and </li>
@@ -93,14 +92,12 @@ import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
  * <p>
  * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#algorithm-considerations">
  *  Financial-grade API Security Profile 1.0 - Part 2: Advanced</a>, in section 5.2.2-14 states:
- *  </p>
- *  <p>>
- *  shall authenticate the confidential client using one of the following methods (this overrides FAPI Security Profile 1.0 - Part 1: Baseline clause 5.2.2-4):
- *  <ol>
- *     <li>tls_client_auth or self_signed_tls_client_auth as specified in section 2 of <a href="https://tools.ietf.org/html/rfc8705">MTLS</a>, or</li>
- *     <li>private_key_jwt as specified in section 9 of <a href="http://openid.net/specs/openid-connect-core-1_0.html">OIDC</a>;</li>
- *  </ol>
- *  </p>
+ * <p>
+ * shall authenticate the confidential client using one of the following methods (this overrides FAPI Security Profile 1.0 - Part 1: Baseline clause 5.2.2-4):
+ * <ol>
+ *   <li>tls_client_auth or self_signed_tls_client_auth as specified in section 2 of <a href="https://tools.ietf.org/html/rfc8705">MTLS</a>, or</li>
+ *   <li>private_key_jwt as specified in section 9 of <a href="http://openid.net/specs/openid-connect-core-1_0.html">OIDC</a>;</li>
+ * </ol>
  *
  * From the <a href="https://openid.net/specs/openid-financial-api-part-1-1_0.html#authorization-server">
  * Financial-grade API Security Profile 1.0 - Part 1: Baseline</a>:
@@ -110,10 +107,12 @@ import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
  *     <li>5.2.2 20: shall require redirect URIs to use the https scheme; </li>
  * </ul>
  *
-*  Note, we also check that the redirect_uri does not contain localhost as we don't want redirects to URIs on the
- * </p>
- *
+ * Note, we also check that the redirect_uri does not contain localhost as we don't want redirects to URIs on the
  * <p>
+ * This filter applies validation to a {@link RegistrationRequest} object that it expects to find the in the
+ * {@link AttributesContext}, this means that a filter to add the object to the context must run prior to this one in
+ * the chain. Typically, this is done by the {@link RegistrationRequestBuilderFilter}.
+ * <p></p>
  * This filter should sit in front of filter(s) which implement DCR for a particular API.
  * <p>
  * This filter will reject any requests which would result in an OAuth2 client being created which did not conform to
@@ -122,7 +121,7 @@ import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
  * IG Config required to create this filter:
  * <pre>
  *     {@code {
- *         "type": "FAPIAdvancedDCRValidationFilter",
+ *         "type": "FapiAdvancedDCRValidationFilter",
  *         "config": {
  *             "certificateRetriever"                   : CertificateRetriever [OPTIONAL]
  *             "clientTlsCertHeader"                    : String               [OPTIONAL] [DEPRECATED]
@@ -153,9 +152,9 @@ import com.forgerock.sapi.gateway.mtls.HeaderCertificateRetriever;
  * registrationObjectSigningFieldNames configures which fields inside the registration request object should be validated
  * against the supportedSigningAlgorithms
  */
-public class FAPIAdvancedDCRValidationFilter implements Filter {
+public class FapiAdvancedDCRValidationFilter implements Filter {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(FAPIAdvancedDCRValidationFilter.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(FapiAdvancedDCRValidationFilter.class);
 
     /**
      * The HTTP methods to apply FAPI validation to.
@@ -181,26 +180,26 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
                                                                                     "id_token_signed_response_alg",
                                                                                     "request_object_signing_alg");
     /**
-     * The JWS signing algorithm's supported by FAPI.
-     *
+     * The JWS signing algorithms supported by FAPI.
+     * <p>
      * This is used to validate the registration JWT (if the registration is in JWT format) alg header and fields in
      * the registration request object which configure the signing algorithms to use for the OAuth2 client,
      * see {@link #registrationObjectSigningFieldNames}.
-     *
+     * <p>
      * This is configurable, for the default set of signing algorithms see {@link #DEFAULT_SUPPORTED_JWS_ALGORITHMS}
      */
     private Set<String> supportedSigningAlgorithms;
 
     /**
      * The registration request object's token_endpoint_auth_method values which are allowed by FAPI.
-     *
+     * <p>
      * This is configurable, for the default set of auth methods see {@link #DEFAULT_SUPPORTED_TOKEN_ENDPOINT_AUTH_METHODS}
      */
     private Set<String> supportedTokenEndpointAuthMethods;
 
     /**
      * The fields within the registration request object to validate against the {@link #supportedSigningAlgorithms}
-     *
+     * <p>
      * This is configurable, for the default set of fields see {@link #DEFAULT_REG_OBJ_SIGNING_FIELD_NAMES}
      */
     private Collection<String> registrationObjectSigningFieldNames;
@@ -211,18 +210,9 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
     private CertificateRetriever clientCertificateRetriever;
 
     /**
-     * Function which returns the DCR Registration Request json object.
-     *
-     * NOTE: If a JWT is submitted which contains the DCR Registration Request as claims, then those claims should
-     * be extracted from the JWT and returned. This function provides flexibility, allowing the registration request
-     * to be sourced directly or unwrapped from within a JWT.
-     */
-    private BiFunction<Context, Request, JsonValue> registrationRequestObjectSupplier;
-
-    /**
      * List of Validators which will validate the DCR Registration json object
      */
-    private List<Validator<JsonValue>> registrationRequestObjectValidators;
+    private List<Validator<RegistrationRequest>> registrationRequestObjectValidators;
 
     /**
      * Factory which produces HTTP Responses for DCR error conditions
@@ -233,24 +223,10 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
      * The filter should be constructed using the {@link Heaplet}.
      * This object is complex to create, the Heaplet follows the builder pattern to produce a coherent object.
      */
-    private FAPIAdvancedDCRValidationFilter() {
+    private FapiAdvancedDCRValidationFilter() {
         errorResponseFactory = new ErrorResponseFactory();
     }
 
-    /**
-     * Checks the request conforms to the
-     * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#authorization-server">
-     *    Financial-grade API Security Profile 1.0 - Part 2: Advanced</a> specs.
-     *
-     *
-     * @param context
-     *            The request context.
-     * @param request
-     *            The request.
-     * @param next
-     *            The next filter or handler in the chain to handle the request.
-     * @return
-     */
     @Override
     public Promise<Response, NeverThrowsException> filter(Context context, Request request, Handler next) {
         if (!VALIDATABLE_HTTP_REQUEST_METHODS.contains(request.getMethod())) {
@@ -274,11 +250,9 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
         }
 
         try {
-            final JsonValue registrationRequestObject = registrationRequestObjectSupplier.apply(context, request);
-            if (registrationRequestObject == null) {
-                throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "registration request entity is missing or malformed");
-            }
-            validateRegistrationRequestObject(registrationRequestObject);
+            final RegistrationRequest registrationRequest = getRequiredAttributeAsType(context, REGISTRATION_REQUEST_KEY,
+                                                                                       RegistrationRequest.class);
+            validateRegistrationRequestObject(registrationRequest);
         } catch (ValidationException ve) {
             LOGGER.debug("FAPI Validation failed", ve);
             return Promises.newResultPromise(errorResponseFactory.errorResponse(context, ve));
@@ -290,9 +264,9 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
         return next.handle(context, request);
     }
 
-    void validateRegistrationRequestObject(JsonValue registrationObject) {
-        for (Validator<JsonValue> validator : registrationRequestObjectValidators) {
-            validator.validate(registrationObject);
+    void validateRegistrationRequestObject(RegistrationRequest registrationRequest) {
+        for (Validator<RegistrationRequest> validator : registrationRequestObjectValidators) {
+            validator.validate(registrationRequest);
         }
     }
 
@@ -304,30 +278,24 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
      *     <li>5.2.2 9: shall require the redirect_uri in the authorization request; </li>
      *     <li>5.2.2 20: shall require redirect URIs to use the https scheme; </li>
      * </ul>
-     *
+     * <p>
      * Note, we also check that the redirect_uri does not contain localhost as we don't want redirects to URIs on the
      * server
-     * @param registrationObject
+     *
+     * @param registrationRequest the RegistrationRequest object to validate
      */
-    void validateRedirectUris(JsonValue registrationObject) {
-        final List<String> redirectUris = registrationObject.get("redirect_uris").asList(String.class);
+    void validateRedirectUris(RegistrationRequest registrationRequest) {
+        final List<URI> redirectUris = registrationRequest.getRedirectUris();
         if (redirectUris == null) {
             throw new ValidationException(DCRErrorCode.INVALID_REDIRECT_URI, "request object must contain redirect_uris field");
         }
         if (redirectUris.isEmpty()) {
             throw new ValidationException(DCRErrorCode.INVALID_REDIRECT_URI, "redirect_uris array must not be empty");
         }
-        for (String uriString : redirectUris) {
-            final URI redirectUri;
-            try {
-                redirectUri = new URI(uriString);
-            } catch (URISyntaxException ex) {
-                throw new ValidationException(DCRErrorCode.INVALID_REDIRECT_URI, "redirect_uri: " + uriString + " is not a valid URI");
-            }
+        for (URI redirectUri : redirectUris) {
             if (!"https".equals(redirectUri.getScheme())) {
                 throw new ValidationException(DCRErrorCode.INVALID_REDIRECT_URI, "redirect_uris must use https scheme");
             }
-
             if (redirectUri.getHost().contains("localhost")) {
                 throw new ValidationException(DCRErrorCode.INVALID_REDIRECT_URI, "redirect_uris must not contain localhost");
             }
@@ -338,19 +306,21 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
      * Validates that the response_types field contains only FAPI compliant response_type values, namely
      * "code" or "code id_token".
      * <p>
-     * https://openid.net/specs/openid-financial-api-part-2-1_0.html#authorization-server specifies:
-     * the authorization server shall require
+     * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#authorization-server">
+     *     Financial-grade API Security Profile 1.0 - Part 2: Advanced</a> specifies: the authorization server shall require
+     * <ol>
+     *   <li>the response_type value code id_token, or</li>
+     *   <li>the response_type value code in conjunction with the response_mode value jwt</li>
+     * </ol>
      *
-     *    1. the response_type value code id_token, or
-     *    2. the response_type value code in conjunction with the response_mode value jwt
-     * @param registrationObject
+     * @param registrationRequest the RegistrationRequest object to validate
      */
-    void validateResponseTypes(JsonValue registrationObject) {
-        final List<String> responseTypesList = registrationObject.get("response_types").asList(String.class);
-        if (responseTypesList == null || responseTypesList.isEmpty()) {
+    void validateResponseTypes(RegistrationRequest registrationRequest) {
+        final Optional<List<String>> requestedResponseTypes = registrationRequest.getResponseTypes();
+        if (requestedResponseTypes.isEmpty()) {
             throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object must contain field: response_types");
         }
-
+        final List<String> responseTypesList = requestedResponseTypes.get();
         for (String responseTypes : responseTypesList) {
             // Convert the request responseTypes String into a set by splitting on whitespace
             final Set<String> responseTypesSet = Set.of(responseTypes.split(" "));
@@ -365,52 +335,68 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
     /**
      * <p>
      * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#algorithm-considerations">
-     *  Financial-grade API Security Profile 1.0 - Part 2: Advanced</a>, in section 5.2.2-14 states:
-     *  </p>
-     *  <p>>
-     *  shall authenticate the confidential client using one of the following methods (this overrides FAPI Security Profile 1.0 - Part 1: Baseline clause 5.2.2-4):
-     *  <ol>
-     *     <li>tls_client_auth or self_signed_tls_client_auth as specified in section 2 of <a href="https://tools.ietf.org/html/rfc8705">MTLS</a>, or</li>
-     *     <li>private_key_jwt as specified in section 9 of <a href="http://openid.net/specs/openid-connect-core-1_0.html">OIDC</a>;</li>
-     *  </ol>
-     *  </p>
-     * @param registrationObject
+     * Financial-grade API Security Profile 1.0 - Part 2: Advanced</a>, in section 5.2.2-14 states:
+     * <p>
+     * shall authenticate the confidential client using one of the following methods (this overrides FAPI Security Profile 1.0 - Part 1: Baseline clause 5.2.2-4):
+     * <ol>
+     *    <li>tls_client_auth or self_signed_tls_client_auth as specified in section 2 of <a href="https://tools.ietf.org/html/rfc8705">MTLS</a>, or</li>
+     *    <li>private_key_jwt as specified in section 9 of <a href="http://openid.net/specs/openid-connect-core-1_0.html">OIDC</a>;</li>
+     * </ol>
+     *
+     * @param registrationRequest the RegistrationRequest object to validate
      */
-    void validateTokenEndpointAuthMethods(JsonValue registrationObject) {
-        final String tokenEndpointAuthMethod = registrationObject.get("token_endpoint_auth_method").asString();
-        if (tokenEndpointAuthMethod == null) {
-            throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object must contain field: token_endpoint_auth_method");
-        }
-        if (!supportedTokenEndpointAuthMethods.contains(tokenEndpointAuthMethod)) {
-            throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "token_endpoint_auth_method not supported, must be one of: "
-                    + supportedTokenEndpointAuthMethods.stream().sorted().collect(Collectors.toList()));
+    void validateTokenEndpointAuthMethods(RegistrationRequest registrationRequest) {
+        try {
+            final ClaimsSetFacade claimsSet = registrationRequest.getClaimsSet();
+            if (!claimsSet.hasClaim("token_endpoint_auth_method")) {
+                throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object must contain field: token_endpoint_auth_method");
+            }
+            final String tokenEndpointAuthMethod = claimsSet.getStringClaim("token_endpoint_auth_method");
+            if (!supportedTokenEndpointAuthMethods.contains(tokenEndpointAuthMethod)) {
+                throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA,
+                        "token_endpoint_auth_method not supported, must be one of: "
+                                + supportedTokenEndpointAuthMethods.stream().sorted().toList());
+            }
+        } catch (JwtException e) {
+            LOGGER.warn("Unexpected exception thrown processing registration request token_endpoint_auth_method field", e);
+            throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "token_endpoint_auth_method field malformed");
         }
     }
 
     /**
      * Validate that values for signing fields are a supported signing algorithm.
-     *
+     * <p>
      * Some fields may be optional for certain types of request, therefore if a field in the
      * registrationObjectSigningFieldNames collection is not found in the registration request then it is skipped rather
      * than throwing an error. It is the job of the filter that implements the registration logic to reject requests
      * with missing fields.
-     *
+     * <p>
      * <a href="https://openid.net/specs/openid-financial-api-part-2-1_0.html#algorithm-considerations">
-     *     Financial-grade API Security Profile 1.0 - Part 2: Advanced </a>  section 8.6 states:
-     *
+     * Financial-grade API Security Profile 1.0 - Part 2: Advanced </a>  section 8.6 states:
+     * <p>
      * For JWS, both clients and authorization servers
      * <ol>
      *     <li>shall use PS256 or ES256 algorithms; </li>
      *     <li>should not use algorithms that use RSASSA-PKCS1-v1_5 (e.g. RS256); and </li>
      *     <li>shall not use none</li>
      * </ol>
+     *
+     * @param registrationRequest the RegistrationRequest object to validate
      */
-    void validateSigningAlgorithmUsed(JsonValue registrationObject) {
+    void validateSigningAlgorithmUsed(RegistrationRequest registrationRequest) {
+        final ClaimsSetFacade claimsSet = registrationRequest.getClaimsSet();
         for (String signingFieldName : registrationObjectSigningFieldNames) {
-            final String signingAlg = registrationObject.get(signingFieldName).asString();
-            if (signingAlg != null && !supportedSigningAlgorithms.contains(signingAlg)) {
-                throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object field: "
-                        + signingFieldName + ", must be one of: " + supportedSigningAlgorithms);
+            if (claimsSet.hasClaim(signingFieldName)) {
+                try {
+                    final String signingAlg = claimsSet.getStringClaim(signingFieldName);
+                    if (!supportedSigningAlgorithms.contains(signingAlg)) {
+                        throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object field: "
+                                + signingFieldName + ", must be one of: " + supportedSigningAlgorithms);
+                    }
+                } catch (JwtException e) {
+                    throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA, "request object field: "
+                            + signingFieldName + ", must be one of: " + supportedSigningAlgorithms);
+                }
             }
         }
     }
@@ -431,11 +417,7 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
         this.clientCertificateRetriever = certificateRetriever;
     }
 
-    void setRegistrationRequestObjectSupplier(BiFunction<Context, Request, JsonValue> registrationRequestObjectSupplier) {
-        this.registrationRequestObjectSupplier = registrationRequestObjectSupplier;
-    }
-
-    void setRegistrationRequestObjectValidators(List<Validator<JsonValue>> registrationRequestObjectValidators) {
+    void setRegistrationRequestObjectValidators(List<Validator<RegistrationRequest>> registrationRequestObjectValidators) {
         this.registrationRequestObjectValidators = registrationRequestObjectValidators;
     }
 
@@ -445,56 +427,19 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
      *
      * @return list of validators that apply the default validation rules to the request object as per the spec.
      */
-    public List<Validator<JsonValue>> getDefaultRequestObjectValidators() {
+    public List<Validator<RegistrationRequest>> getDefaultRequestObjectValidators() {
         return List.of(this::validateRedirectUris, this::validateResponseTypes, this::validateSigningAlgorithmUsed,
                        this::validateTokenEndpointAuthMethods);
     }
 
-    /**
-     * Supplies the Registration Request json object from a JWT contained within the Request.entity
-     *
-     * The JWT signing algo in the header is validated against the supported set of signing algorithms for FAPI.
-     * No other validation is done at this point, it is assumed that Filters later in the chain will validate the sig etc
-     */
-    public static class RegistrationRequestObjectFromJwtSupplier implements BiFunction<Context, Request, JsonValue> {
-
-        private final Set<String> supportedSigningAlgorithms;
-
-        public RegistrationRequestObjectFromJwtSupplier(Collection<String> supportedSigningAlgorithms) {
-            this.supportedSigningAlgorithms = new HashSet<>(supportedSigningAlgorithms);
-        }
-
-        @Override
-        public JsonValue apply(Context context, Request request) {
-            try {
-                final String registrationRequestJwtString = request.getEntity().getString();
-                final SignedJwt registrationRequestJwt = new JwtReconstruction().reconstructJwt(registrationRequestJwtString,
-                                                                                                SignedJwt.class);
-                LOGGER.debug("Registration Request JWT to validate: {}", registrationRequestJwtString);
-                final JwsAlgorithm signingAlgo = registrationRequestJwt.getHeader().getAlgorithm();
-                // This validation is being done here as outside the supplier we are not aware that a JWT existed
-                if (signingAlgo == null || !supportedSigningAlgorithms.contains(signingAlgo.getJwaAlgorithmName())) {
-                    throw new ValidationException(DCRErrorCode.INVALID_CLIENT_METADATA,
-                            "DCR request JWT signed must be signed with one of: " + supportedSigningAlgorithms);
-                }
-                final JwtClaimsSet claimsSet = registrationRequestJwt.getClaimsSet();
-                return claimsSet.toJsonValue();
-            } catch (InvalidJwtException | IOException e) {
-                LOGGER.warn("FAPI DCR failed: unable to extract registration object JWT from request", e);
-                // These are not validation errors, so do not raise a validation exception, instead allow the filter to handle the null response
-                return null;
-            }
-        }
-    }
-
-    /** Creates and initializes a FAPIAdvancedDCRValidationFilter */
+    /** Creates and initializes a FapiAdvancedDCRValidationFilter */
     public static class Heaplet extends GenericHeaplet {
 
         private final Logger logger = LoggerFactory.getLogger(getClass());
 
         @Override
         public Object create() throws HeapException {
-            final FAPIAdvancedDCRValidationFilter filter = new FAPIAdvancedDCRValidationFilter();
+            final FapiAdvancedDCRValidationFilter filter = new FapiAdvancedDCRValidationFilter();
 
             final List<String> supportedSigningAlgorithms = config.get("supportedSigningAlgorithms")
                                                                    .as(evaluatedWithHeapProperties())
@@ -531,15 +476,12 @@ public class FAPIAdvancedDCRValidationFilter implements Filter {
                 final String clientCertHeaderName = config.get("clientTlsCertHeader").required().asString();
                 logger.warn("{} config option clientTlsCertHeader is deprecated, use certificateRetriever instead. " +
                             "This option needs to contain a value which is a reference to a {} object on the heap",
-                            FAPIAdvancedDCRValidationFilter.class.getSimpleName(), CertificateRetriever.class);
+                            FapiAdvancedDCRValidationFilter.class.getSimpleName(), CertificateRetriever.class);
                 filter.setClientCertificateRetriever(new HeaderCertificateRetriever(clientCertHeaderName));
             }
 
-            final List<Validator<JsonValue>> requestObjectValidators = filter.getDefaultRequestObjectValidators();
+            final List<Validator<RegistrationRequest>> requestObjectValidators = filter.getDefaultRequestObjectValidators();
             filter.setRegistrationRequestObjectValidators(requestObjectValidators);
-
-            final BiFunction<Context, Request, JsonValue> registrationObjectSupplier = new RegistrationRequestObjectFromJwtSupplier(supportedSigningAlgorithms);
-            filter.setRegistrationRequestObjectSupplier(registrationObjectSupplier);
 
             return filter;
         }
