@@ -19,10 +19,10 @@ import static com.forgerock.sapi.gateway.dcr.models.ApiClientTest.createApiClien
 import static org.forgerock.json.JsonValue.field;
 import static org.forgerock.json.JsonValue.json;
 import static org.forgerock.json.JsonValue.object;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.net.URI;
-import java.net.URL;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -36,24 +36,23 @@ import org.forgerock.json.jose.jwt.JwtClaimsSet;
 import org.forgerock.util.promise.Promise;
 import org.junit.jupiter.api.Test;
 
-import com.forgerock.sapi.gateway.dcr.models.ApiClientTest;
 import com.forgerock.sapi.gateway.dcr.models.ApiClient;
+import com.forgerock.sapi.gateway.dcr.models.ApiClientTest;
 import com.forgerock.sapi.gateway.jwks.cache.BaseCachingJwkSetServiceTest.ReturnsErrorsJwkStore;
 import com.forgerock.sapi.gateway.jwks.mocks.MockJwkSetService;
 import com.forgerock.sapi.gateway.trusteddirectories.TrustedDirectory;
-import com.forgerock.sapi.gateway.trusteddirectories.TrustedDirectoryOpenBankingTest;
-import com.forgerock.sapi.gateway.trusteddirectories.TrustedDirectorySecureApiGateway;
+import com.forgerock.sapi.gateway.trusteddirectories.TrustedDirectoryTestFactory;
 
 class DefaultApiClientJwkSetServiceTest {
 
     @Test
     void fetchJwkSetFromJwksUri() throws Exception {
         final JWKSet jwkSet = createJwkSet();
-        final URL jwksUri = new URL("https://directory.com/jwks/12345");
-        final MockJwkSetService jwkSetService = new MockJwkSetService(Map.of(jwksUri, jwkSet));
+        final URI jwkSetUri = URI.create("https://directory.com/jwks/12345");
+        final MockJwkSetService jwkSetService = new MockJwkSetService(Map.of(jwkSetUri, jwkSet));
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(jwkSetService);
 
-        fetchJwkSetFromJwksUri(jwkSet, jwksUri, apiClientJwkSetService);
+        fetchJwkSetFromJwksUri(jwkSet, jwkSetUri, apiClientJwkSetService);
     }
 
     @Test
@@ -65,10 +64,10 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsIfJwkSetServiceThrowsException() throws Exception {
-        final URL jwksUri = new URL("https://directory.com/jwks/12345");
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri.toURI());
-        final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
+    void failsIfJwkSetServiceThrowsException() {
+        final URI jwkSetUri = URI.create("https://directory.com/jwks/12345");
+        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwkSetUri);
+        final TrustedDirectory trustedDirectory = TrustedDirectoryTestFactory.getJwksUriBasedTrustedDirectory();
 
         // Returns an Exception promise on every call
         final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
@@ -81,23 +80,9 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsIfJwksUriIsInvalid() throws Exception {
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(new URI("foo://bar"));
-        final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
-
-        final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
-        final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
-
-        final Promise<JWKSet, FailedToLoadJWKException> jwkSetPromise = apiClientJwkSetService.getJwkSet(apiClient, trustedDirectory);
-        final FailedToLoadJWKException exception = assertThrows(FailedToLoadJWKException.class,
-                () -> jwkSetPromise.getOrThrow(1, TimeUnit.MILLISECONDS));
-        assertEquals("Malformed jwksUri", exception.getMessage());
-    }
-
-    @Test
     void failsIfJwksUriIsNull() {
         final ApiClient apiClient = ApiClientTest.createBuilderWithJwks().build();
-        final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
+        final TrustedDirectory trustedDirectory = TrustedDirectoryTestFactory.getJwksUriBasedTrustedDirectory();
 
         final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
@@ -109,36 +94,16 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsToGetJwksFromSoftwareStatementIfTrustedDirectorySoftwareStatementJwksClaimNameIsMissing() throws Exception {
-        final JwkSetService errorsJwkStore = new ReturnsErrorsJwkStore();
-        final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
-        final JWKSet jwkSet = createJwkSet();
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
-        final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI) {
-            @Override
-            public String getSoftwareStatementJwksClaimName() {
-                return null;
-            }
-        };
-        final ApiClient apiClient = createApiClientWithSoftwareStatementJwks(jwkSet,"jwks");
-
-        final Promise<JWKSet, FailedToLoadJWKException> jwkSetPromise = apiClientJwkSetService.getJwkSet(apiClient, misconfiguredDirectory);
-
-        final Exception exception = assertThrows(FailedToLoadJWKException.class, () -> jwkSetPromise.getOrThrow(1, TimeUnit.MILLISECONDS));
-        assertEquals("Trusted Directory has softwareStatemdntHoldsJwksUri=false but is missing softwareStatementJwksClaimName value",
-                     exception.getMessage());
-    }
-
-    @Test
-    void failsToGetJwksFromSoftwareStatementIfClaimIsNull() throws Exception {
+    void failsToGetJwksFromSoftwareStatementIfClaimIsNull() {
         final ReturnsErrorsJwkStore errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
         final JWKSet jwkSet = createJwkSet();
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
-        final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
-        final ApiClient apiClient = createApiClientWithSoftwareStatementJwks(jwkSet,null);
+        final TrustedDirectory misconfiguredDirectory = TrustedDirectoryTestFactory.getEmbeddedJwksBasedDirectoryIssuer();
 
-        final Promise<JWKSet, FailedToLoadJWKException> jwkSetPromise = apiClientJwkSetService.getJwkSet(apiClient, misconfiguredDirectory);
+        final ApiClient apiClientWithSsaMissingJwksClaimValue =
+                createApiClientWithSoftwareStatementJwks(jwkSet,null);
+
+        final Promise<JWKSet, FailedToLoadJWKException> jwkSetPromise = apiClientJwkSetService.getJwkSet(apiClientWithSsaMissingJwksClaimValue, misconfiguredDirectory);
 
         final Exception exception = assertThrows(FailedToLoadJWKException.class, () -> jwkSetPromise.getOrThrow(1, TimeUnit.MILLISECONDS));
         assertEquals("SSA is missing claim: software_jwks which is expected to contain the JWKS",
@@ -146,11 +111,10 @@ class DefaultApiClientJwkSetServiceTest {
     }
 
     @Test
-    void failsToGetJwksFromSoftwareStatementIfClaimsIsInvalidJwksJson() throws Exception {
+    void failsToGetJwksFromSoftwareStatementIfClaimsIsInvalidJwksJson() {
         final ReturnsErrorsJwkStore errorsJwkStore = new ReturnsErrorsJwkStore();
         final ApiClientJwkSetService apiClientJwkSetService = new DefaultApiClientJwkSetService(errorsJwkStore);
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
-        final TrustedDirectory misconfiguredDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
+        final TrustedDirectory misconfiguredDirectory = TrustedDirectoryTestFactory.getEmbeddedJwksBasedDirectoryIssuer();
 
         final JwtClaimsSet claimsSet = new JwtClaimsSet();
         claimsSet.setClaim(misconfiguredDirectory.getSoftwareStatementJwksClaimName(), json(object(field("keys", "should be a list"))));
@@ -168,18 +132,17 @@ class DefaultApiClientJwkSetServiceTest {
                           RestJwkSetServiceTest.createJWK(UUID.randomUUID().toString())));
     }
 
-    private void fetchJwkSetFromJwksUri(JWKSet expectedJwkSet, URL jwksUri, ApiClientJwkSetService apiClientJwkSetService) throws Exception {
-        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri.toURI());
+    private void fetchJwkSetFromJwksUri(JWKSet expectedJwkSet, URI jwksUri, ApiClientJwkSetService apiClientJwkSetService) throws Exception {
+        final ApiClient apiClient = ApiClientTest.createApiClientWithJwksUri(jwksUri);
         // OB Trusted Dir uses the jwksUri
-        final TrustedDirectory trustedDirectory = new TrustedDirectoryOpenBankingTest();
+        final TrustedDirectory trustedDirectory = TrustedDirectoryTestFactory.getJwksUriBasedTrustedDirectory();
         invokeFilterAndValidateSuccessResponse(expectedJwkSet, apiClient, trustedDirectory, apiClientJwkSetService);
     }
 
     private void fetchJwkSetFromSoftwareStatement(ApiClientJwkSetService apiClientJwkSetService) throws Exception {
         final JWKSet jwkSet = createJwkSet();
         // SAPI-G directory uses the software statement jwks
-        final URL secureApiGatewayJwksURI = new URL("https://blah.com");
-        final TrustedDirectory trustedDirectory = new TrustedDirectorySecureApiGateway(secureApiGatewayJwksURI);
+        final TrustedDirectory trustedDirectory = TrustedDirectoryTestFactory.getEmbeddedJwksBasedDirectoryIssuer();
         final ApiClient apiClient = createApiClientWithSoftwareStatementJwks(jwkSet, trustedDirectory.getSoftwareStatementJwksClaimName());
 
         invokeFilterAndValidateSuccessResponse(jwkSet, apiClient, trustedDirectory, apiClientJwkSetService);
